--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
 <html>
 <head>
+<title>Checkers</title>
+<link rel="stylesheet" type="text/css" href="index.css">
 <script src="index.js"></script>
 </head>
 <body>
