--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 <title>Checkers</title>
 <link rel="stylesheet" type="text/css" href="index.css">
+<link href="https://fonts.googleapis.com/css?family=Wire+One" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <script src="index.js"></script>
 </head>
 <body>
